fixed active navlink + nav layout

--- a/book_us.html
+++ b/book_us.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active  text-center" aria-current="page" href="./">
+                        <a class="nav-link text-center" aria-current="page" href="./">
                             <img id="nav-icon" class="center-block  nav-margin" src="img/home_icon.png" alt="">
                             Homepage
                         </a>
@@ -62,7 +62,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Mascot Package</a></li>
+                                <li><a class="dropdown-item" href="mascot_package.html">Mascot Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -123,7 +123,7 @@
                     <li class="nav-item d-flex justify-content-center">
                         <div class="btn-group">
                             <button type="button" class="btn">
-                                <a href="./party_packages.html">
+                                <a href="./corporate_packages.html">
                                     <img id="nav-icon" class="center-block" src="img/corporate.png" alt="">
                                     Corporate <br> Package
                                 </a>
@@ -160,7 +160,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="./book_us.html">
+                        <a class="nav-link active text-center" href="./book_us.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/booking_icon.png" alt="">
                             Booking
                         </a>
