--- a/henna_tattoo.html
+++ b/henna_tattoo.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active  text-center" aria-current="page" href="./">
+                        <a class="nav-link text-center" aria-current="page" href="./">
                             <img id="nav-icon" class="center-block  nav-margin" src="img/home_icon.png" alt="">
                             Homepage
                         </a>
@@ -39,7 +39,7 @@
                     <li class="nav-item d-flex justify-content-center">
                         <div class="btn-group">
                             <button type="button" class="btn">
-                                <a href="./party_packages.html">
+                                <a href="./party_packages.html" class="active">
                                     <img id="nav-icon" class="center-block" src="img/party.png" alt="">
                                     Party <br> Package
                                 </a>
@@ -62,7 +62,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Mascot Package</a></li>
+                                <li><a class="dropdown-item" href="mascot_package.html">Mascot Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -123,7 +123,7 @@
                     <li class="nav-item d-flex justify-content-center">
                         <div class="btn-group">
                             <button type="button" class="btn">
-                                <a href="./party_packages.html">
+                                <a href="./corporate_packages.html">
                                     <img id="nav-icon" class="center-block" src="img/corporate.png" alt="">
                                     Corporate <br> Package
                                 </a>
@@ -283,7 +283,7 @@
                                     <div class="col" style="text-align: right;">
                                         <p style="text-align: right; font-size: 18px;">1 hours for</p>
                                         <p style="text-align: right; font-size: 15px;">15 - 18 kids is</p>
-                                        <p style="color: #DD3333; text-align: right; font-size: 24px;"> $220</p>
+                                        <p style="color: #DD3333; text-align: right; font-size: 24px;"> $260</p>
                                     </div>
                                 </div>
                             </div>
