--- a/party_packages.html
+++ b/party_packages.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active  text-center" aria-current="page" href="./">
+                        <a class="nav-link text-center" aria-current="page" href="./">
                             <img id="nav-icon" class="center-block  nav-margin" src="img/home_icon.png" alt="">
                             Homepage
                         </a>
@@ -39,7 +39,7 @@
                     <li class="nav-item d-flex justify-content-center">
                         <div class="btn-group">
                             <button type="button" class="btn">
-                                <a href="./party_packages.html">
+                                <a href="./party_packages.html" class="active">
                                     <img id="nav-icon" class="center-block" src="img/party.png" alt="">
                                     Party <br> Package
                                 </a>
@@ -62,7 +62,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Mascot Package</a></li>
+                                <li><a class="dropdown-item" href="mascot_package.html">Mascot Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -123,7 +123,7 @@
                     <li class="nav-item d-flex justify-content-center">
                         <div class="btn-group">
                             <button type="button" class="btn">
-                                <a href="./party_packages.html">
+                                <a href="./corporate_packages.html">
                                     <img id="nav-icon" class="center-block" src="img/corporate.png" alt="">
                                     Corporate <br> Package
                                 </a>
@@ -178,35 +178,49 @@
         <div class="row">
             <div class="col" id="row-1">
                 <div class="card">
-                    <form action="#">
+                    <form action="./corporate_packages.html" id="category_form">
                         <div class="catagory_title text-center">Catagories</div>
                         <div class="catagory_list">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
-                                    value="option1" checked>
-                                <label class="form-check-label" for="exampleRadios1" style="color: blue;">
+                                <input class="form-check-input" type="radio" name="categories" id="category_party"
+                                    value="party_packages.html" checked />
+                                <label class="form-check-label" for="category_party">
                                     Party Packages
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
+                                <input class="form-check-input" type="radio" name="categories" id="category_character"
+                                    value="character_packages.html" />
+                                <label class="form-check-label" for="category_character">
                                     Character Packages
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
+                                <input class="form-check-input" type="radio" name="categories" id="category_corporate"
+                                    value="corporate_packages.html" />
+                                <label class="form-check-label" for="category_corporate">
                                     Corporate packages
                                 </label>
                             </div>
                         </div>
                         <div>
-                            <button class="button-custom-small" type="button" id="form-btn">Submit</button>
+                            <button class="button-custom-small" id="form-btn">
+                                Submit
+                            </button>
                         </div>
                     </form>
+                    <script>
+                        var categoryRadios = document.getElementsByName("categories");
+                        var categoryForm = document.getElementById("category_form");
+                        categoryForm.onsubmit = function (e) {
+                            e.preventDefault();
+                            for (var i = 0; i < categoryRadios.length; i++)
+                                if (categoryRadios[i].checked) {
+                                    location.href = categoryRadios[i].value;
+                                    break;
+                                }
+                        };
+                    </script>
                 </div>
             </div>
             <div class="col-md-9" id="row-2">
