--- a/xmas_events.html
+++ b/xmas_events.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active  text-center" aria-current="page" href="./">
+                        <a class="nav-link text-center" aria-current="page" href="./">
                             <img id="nav-icon" class="center-block  nav-margin" src="img/home_icon.png" alt="">
                             Homepage
                         </a>
@@ -62,7 +62,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Mascot Package</a></li>
+                                <li><a class="dropdown-item" href="mascot_package.html">Mascot Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -123,7 +123,7 @@
                     <li class="nav-item d-flex justify-content-center">
                         <div class="btn-group">
                             <button type="button" class="btn">
-                                <a href="./party_packages.html">
+                                <a href="./corporate_packages.html" class="active">
                                     <img id="nav-icon" class="center-block" src="img/corporate.png" alt="">
                                     Corporate <br> Package
                                 </a>
@@ -247,8 +247,6 @@
                                     do the Face Paint, Balloon Animal and entertain the kids weekly or monthly. <br><br>
 
                                     Please call us for the quote @ +1300 976 750 <br>
-
-                                    We offer first-day free service. <br><br>
 
                                     To make your next corporate events a smash hit Kids Dream Entertainment Service is
                                     the best choice. We specialize in creating awesome events by providing top class
