--- a/corporate_packages.html
+++ b/corporate_packages.html
@@ -245,15 +245,10 @@
                         </div>
                     </form>
                     <script>
-                        var categoryRadios = document.getElementsByName("categories");
                         var categoryForm = document.getElementById("category_form");
                         categoryForm.onsubmit = function (e) {
                             e.preventDefault();
-                            for (var i = 0; i < categoryRadios.length; i++)
-                                if (categoryRadios[i].checked) {
-                                    location.href = categoryRadios[i].value;
-                                    break;
-                                }
+                            location.href = new FormData(categoryForm).get('categories');
                         };
                     </script>
                 </div>
@@ -263,7 +258,7 @@
                     <div class="row">
                         <div class="col-md-2"></div>
                         <div class="col-md-4">
-                            <a href="./face_painting.html">
+                            <a href="./sports_events.html">
                                 <div class="img-card">
                                     <img src="img/sports.jpg" alt="" />
                                     <div class="img-title">Sports Events</div>
@@ -271,10 +266,12 @@
                             </a>
                         </div>
                         <div class="col-md-4">
-                            <div class="img-card">
-                                <img src="img/xmas.jpg" alt="" />
-                                <div class="img-title">Christmas Events</div>
-                            </div>
+                            <a href="./xmas_events.html">
+                                <div class="img-card">
+                                    <img src="img/xmas.jpg" alt="" />
+                                    <div class="img-title">Christmas Events</div>
+                                </div>
+                            </a>
                         </div>
                         <div class="col-md-2"></div>
                     </div>
