--- a/character_packages.html
+++ b/character_packages.html
@@ -172,11 +172,11 @@
 
     <div class="page-title-background d-flex justify-content-center align-items-center"
         style="background: url('img/topbanner.png');">
-        <div class="page-title"><br>Character Packages</div>
+        <h1 class="page-title"><br>Character Packages</h1>
     </div>
     <div class="container main-body">
         <div class="row">
-            <div class="col" id="row-1">
+            <div class="col-lg-3 col-sm-12" id="row-1">
                 <div class="card">
                     <form action="./corporate_packages.html" id="category_form">
                         <div class="catagory_title text-center">Catagories</div>
@@ -218,7 +218,7 @@
                     </script>
                 </div>
             </div>
-            <div class="col-md-9" id="row-2">
+            <div class="col-lg-9 col-sm-12" id="row-2">
                 <div class="card">
                     <div class="row">
                         <div class="col-md-4">
