--- a/balloon_sculpting.html
+++ b/balloon_sculpting.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Face Painting & Temporary Tattoo - Kids Party</title>
+    <meta name="description"
+        content="If you are looking for a balloon entertainer to host your kids party or any event then look no further. Our Balloon Sculting package is made for just that.">
+    <title>Balloon Sculpting - Kids Party</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -172,90 +174,74 @@
 
     <div class="page-title-background d-flex justify-content-center align-items-center"
         style="background: url('img/topbanner.png');">
-        <div class="page-title"><br> Packages</div>
+        <h1 class="page-title"><br> Packages</h1>
     </div>
     <div class="container main-body">
         <div class="row">
-            <div class="col" id="row-1">
+            <div class="col-lg-3 col-sm-12" id="row-1">
                 <div class="card">
-                    <form action="#">
                         <div class="catagory_title text-center">Catagories</div>
-                        <div class="catagory_list">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
-                                    value="option1" checked>
-                                <label class="form-check-label" for="exampleRadios1" style="color: blue;">
-                                    Party Packages
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    Character Packages
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    Corporate packages
-                                </label>
-                            </div>
-                        </div><br><br>
+                    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link active bg-white" id="pills-home-tab" data-bs-toggle="pill"
+                                data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home"
+                                aria-selected="true">Party Packages</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link bg-white" id="pills-profile-tab" data-bs-toggle="pill"
+                                data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile"
+                                aria-selected="false">Character Packages</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link bg-white" id="pills-contact-tab" data-bs-toggle="pill"
+                                data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact"
+                                aria-selected="false">Corporate packages</button>
+                        </li>
+                    </ul>
                         <div class="catagory_title text-center">Packages</div>
-                        <div class="catagory_list">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    Face Painting and Temporary Tatto
-                                </label>
+                    <div class="tab-content" id="pills-tabContent">
+                        <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
+                            aria-labelledby="pills-home-tab">
+                            <ul>
+                                <li><a href="face_painting.html">Face Painting & Temporary Tattoo</a></li>
+                                <li><a href="balloon_sculpting.html">Balloon Sculpting</a></li>
+                                <li><a href="henna_tattoo.html">Hanna Tattoo</a></li>
+                                <li><a href="mascot_package.html">Mascot Package</a></li>
+                            </ul>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
-                                    value="option1" checked>
-                                <label class="form-check-label" for="exampleRadios1" style="color: blue;">
-                                    Balloon Sculpting
-                                </label>
+                        <div class="tab-pane fade" id="pills-profile" role="tabpanel"
+                            aria-labelledby="pills-profile-tab">
+                            <ul>
+                                <li><a href="fairy_package.html">Fairy Package</a></li>
+                                <li><a href="princess_package.html">Princess Package</a></li>
+                                <li><a href="pirate_package.html">Pirate Package</a></li>
+                                <li><a href="elsa_or_enna.html">Elsa or Anna</a></li>
+                                <li><a href="elsa_and_enna.html">Elsa and Anna</a></li>
+                                <li><a href="elsa_enna_olaf.html">Elsa, Anna and Olaf</a></li>
+                                <li><a href="clown_package.html">Clown Package</a></li>
+                                <li><a href="superhero_package.html">Superhero Package</a></li>
+                                <li><a href="magician_package.html">Magician Package</a></li>
+                            </ul>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    Mascot Package
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    Henna Tattoo
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    Jumping Castle
-                                </label>
-                            </div>
+                        <div class="tab-pane fade" id="pills-contact" role="tabpanel"
+                            aria-labelledby="pills-contact-tab">
+                            <ul>
+                                <li><a href="sports_events.html">Sports Events</a></li>
+                                <li><a href="xmas_events.html">Xmas Events</a></li>
+                                <li><a href="jumping_castle.html">Jumping Castle</a></li>
+                            </ul>
                         </div>
-                        <div>
-                            <button class="button-custom-small" type="button" id="form-btn">Submit</button>
                         </div>
-                    </form>
+
                 </div>
             </div>
-            <div class="col-md-9" id="row-2">
+            <div class="col-lg-9 col-sm-12" id="row-2">
                 <div class="card">
-                    <div class="text-card">
-                        <h1 class="text-center">Balloon Sculpting</h1>
-                    </div><br>
+                    <h2 class="text-center text-card">Balloon Sculpting</h2>
+                    <br>
                     <div class="row">
                         <div class="col-md-8" id="row-1">
-                            <div class="text-card">
-                                <p>
+                            <p class="text-card">
                                     If you are looking for a balloon entertainer to host your kids' party or any
                                     corporate event then look no further. <br><br>
 
@@ -264,8 +250,9 @@
                                     balloon animal like the giraffe, dog, cat mice, monkey, balloon hat, flower, pirate
                                     sword, love heart, butterfly and lots more. <br><br>
 
-                                    Our rate only for balloon sculpting including costume </p>
-                            </div><br>
+                                Our rate only for balloon sculpting including costume
+                            </p>
+                            <br>
                             <div class="text-card">
                                 <img src="img/phone.png" style="height: 15px;" alt="">&nbsp;&nbsp;<span
                                     style="color:#DD3333;">
@@ -274,9 +261,9 @@
                                 reservation
                             </div>
                             <br>
-                            <div class="text-card">
+                            <p class="text-card">
                                 NB: After hour fees, Maximum kid limit and Travel fees may be applicable
-                            </div>
+                            </p>
                         </div>
                         <div class="col-md-4" id="row-2">
                             <div class="img-card">
@@ -288,9 +275,10 @@
                                         <img src="img/red-arrow.png" alt="">
                                     </div>
                                     <div class="col" style="text-align: right;">
-                                        <p style="text-align: right; font-size: 18px;">1 hours for</p>
-                                        <p style="text-align: right; font-size: 15px;">15 - 18 kids is</p>
-                                        <p style="color: #DD3333; text-align: right; font-size: 24px;"> $220</p>
+                                        <h3 style="text-align: right; font-size: 18px;">1 hours for
+                                            <br>15-18 kids is
+                                            <br><span style="color: red; font-size:25px"> $220</span>
+                                        </h3>
                                     </div>
                                 </div>
                             </div>
@@ -301,7 +289,7 @@
         </div>
         <br>
         <hr><br><br>
-        <div class="page-title">
+        <div class="page-title-black">
             Related Packages
         </div>
         <div class="row">
