--- a/book_us.html
+++ b/book_us.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+        content="Book any of our packages online. We will make sure that you and your kids will have a great time by the selected package.">
     <title>Face Painting & Temporary Tattoo - Kids Party</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -192,11 +194,11 @@
                                 </td>
                             </tr><br>
                             <tr style="width: 100%;">
-                                <td style="width: 25%; font-size: 9px;">Weekdays</td>
-                                <td style="width: 75%;">8AM - 6PM</td>
+                                <td style="width: 35%; font-size: 15px;">Weekdays</td>
+                                <td style="width: 65%;">8AM - 6PM</td>
                             </tr><br>
                             <tr style="width: 100%;">
-                                <td style="width: 25%;  font-size: 9px;">Weekends</td>
+                                <td style="width: 25%;  font-size: 15px;">Weekends</td>
                                 <td style="width: 75%;">9AM - 5PM</td>
                             </tr><br>
                         </table>
