--- a/elsa_enna_olaf.html
+++ b/elsa_enna_olaf.html
@@ -137,11 +137,15 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./sports_events.html">Sports Events</a></li>
+                                <li><a class="dropdown-item" href="sports_events.html">Sports Events</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./xmas_events.html">Christmas Events</a></li>
+                                <li><a class="dropdown-item" href="xmas_events.html">Christmas Events</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="jumping_castle.html">Jumping Castle</a></li>
                             </ul>
                         </div>
                     </li>
@@ -176,118 +180,74 @@
 
     <div class="page-title-background d-flex justify-content-center align-items-center"
         style="background: url('img/topbanner.png');">
-        <div class="page-title"><br> Packages</div>
+        <h1 class="page-title"><br> Packages</h1>
     </div>
     <div class="container main-body">
         <div class="row">
-            <div class="col" id="row-1">
+            <div class="col-lg-3 col-sm-12" id="row-1">
                 <div class="card">
-                    <form action="#">
                         <div class="catagory_title text-center">Catagories</div>
-                        <div class="catagory_list">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    Party Packages
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
-                                    value="option1" checked>
-                                <label class="form-check-label" for="exampleRadios1" style="color: blue;">
-                                    Character Packages
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    Corporate packages
-                                </label>
-                            </div>
-                        </div><br><br>
+                    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link bg-white" id="pills-home-tab" data-bs-toggle="pill"
+                                data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home"
+                                aria-selected="true">Party Packages</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link active bg-white" id="pills-profile-tab" data-bs-toggle="pill"
+                                data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile"
+                                aria-selected="false">Character Packages</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link bg-white" id="pills-contact-tab" data-bs-toggle="pill"
+                                data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact"
+                                aria-selected="false">Corporate packages</button>
+                        </li>
+                    </ul>
                         <div class="catagory_title text-center">Packages</div>
-                        <div class="catagory_list">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
-                                    value="option1" checked>
-                                <label class="form-check-label" for="exampleRadios1" style="color: blue;">
-                                    Fairy package
-                                </label>
+                    <div class="tab-content" id="pills-tabContent">
+                        <div class="tab-pane fade" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                            <ul>
+                                <li><a href="face_painting.html">Face Painting & Temporary Tattoo</a></li>
+                                <li><a href="balloon_sculpting.html">Balloon Sculpting</a></li>
+                                <li><a href="henna_tattoo.html">Hanna Tattoo</a></li>
+                                <li><a href="mascot_package.html">Mascot Package</a></li>
+                            </ul>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    Princess Package
-                                </label>
+                        <div class="tab-pane fade show active" id="pills-profile" role="tabpanel"
+                            aria-labelledby="pills-profile-tab">
+                            <ul>
+                                <li><a href="fairy_package.html">Fairy Package</a></li>
+                                <li><a href="princess_package.html">Princess Package</a></li>
+                                <li><a href="pirate_package.html">Pirate Package</a></li>
+                                <li><a href="elsa_or_enna.html">Elsa or Anna</a></li>
+                                <li><a href="elsa_and_enna.html">Elsa and Anna</a></li>
+                                <li><a href="elsa_enna_olaf.html">Elsa, Anna and Olaf</a></li>
+                                <li><a href="clown_package.html">Clown Package</a></li>
+                                <li><a href="superhero_package.html">Superhero Package</a></li>
+                                <li><a href="magician_package.html">Magician Package</a></li>
+                            </ul>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    Pirate Package
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    The Ever Enchanting Elsa or Anna
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    Elsa and Anna
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    Elsa, Anna, and Olaf
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    Clown Package
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    Superhero Package
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
-                                    value="option1">
-                                <label class="form-check-label" for="exampleRadios1">
-                                    Magician Package
-                                </label>
-                            </div>
+                        <div class="tab-pane fade" id="pills-contact" role="tabpanel"
+                            aria-labelledby="pills-contact-tab">
+                            <ul>
+                                <li><a href="sports_events.html">Sports Events</a></li>
+                                <li><a href="xmas_events.html">Xmas Events</a></li>
+                                <li><a href="jumping_castle.html">Jumping Castle</a></li>
+                            </ul>
                         </div>
-                        <div>
-                            <button class="button-custom-small" type="button" id="form-btn">Submit</button>
                         </div>
-                    </form>
+
                 </div>
             </div>
-            <div class="col-md-9" id="row-2">
+            <div class="col-lg-9 col-sm-12" id="row-2">
                 <div class="card">
-                    <div class="text-card">
-                        <h1 class="text-center">Elsa, Enna and Olaf Package</h1>
-                    </div><br>
+                    <h2 class="text-center">Elsa, Enna and Olaf Package</h2>
+                    <br>
                     <div class="row">
                         <div class="col-md-8" id="row-1">
-                            <div class="text-card">
-                                <p>
+                            <p class="text-card">
+
                                     Our fairy party host will take the children on an amazing adventure through the
                                     fairyland. <br><br>
 
@@ -303,8 +263,7 @@
 
                                     Give your child a party full of fairy dream to share with their friends on their
                                     exceptional day.
-                                </p>
-                            </div><br>
+                            </p><br>
                             <div class="text-card">
                                 <img src="img/phone.png" style="height: 15px;" alt="">&nbsp;&nbsp;<span
                                     style="color:#DD3333;">
@@ -313,9 +272,9 @@
                                 reservation
                             </div>
                             <br>
-                            <div class="text-card">
+                            <p class="text-card">
                                 NB: After hour fees, Maximum kid limit and Travel fees may be applicable
-                            </div>
+                            </p>
                         </div>
                         <div class="col-md-4" id="row-2">
                             <div class="img-card">
@@ -327,8 +286,9 @@
                                         <img src="img/red-arrow.png" alt="">
                                     </div>
                                     <div class="col" style="text-align: right;">
-                                        <p style="text-align: right; font-size: 18px;">2 hours for</p>
-                                        <p style="color: #DD3333; text-align: right; font-size: 24px;"> $550</p>
+                                        <h3 style="text-align: right; font-size: 18px;">2 hours for
+                                            <br><span style="color: red; font-size:25px"> $550</span>
+                                        </h3>
                                     </div>
                                 </div>
                             </div>
@@ -461,10 +421,6 @@
                 </div>
             </div>
         </div>
-        <div class="text-center">
-            <br><br><br>
-            <p>Developed an Maintained by <a href="https://rosetech.dev" style="color: red;">RoseTech Solutions
-                    Ltd.</a></p>
         </div>
         <div class="text-center" style="margin-top: 80px;">
             <p>Copyright © 2022 - Kids Dream Entertainment Ltd.</p>
