--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="./">
+            <a class="navbar-brand" href="index.html">
                 <img id="nav-logo" src="img/kids-dream-logo.png" alt=""><br>
                 <p id="nav-logo-text">Kids Dream Entertaitment</p>
             </a>
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-center" aria-current="page" href="./">
+                        <a class="nav-link active text-center" aria-current="page" href="index.html">
                             <img id="nav-icon" class="center-block  nav-margin" src="img/home_icon.png" alt="">
                             Homepage
                         </a>
@@ -41,7 +41,7 @@
                     <li class="nav-item d-flex justify-content-center">
                         <div class="btn-group">
                             <button type="button" class="btn">
-                                <a href="./party_packages.html">
+                                <a href="party_packages.html">
                                     <img id="nav-icon" class="center-block" src="img/party.png" alt="">
                                     Party <br> Package
                                 </a>
@@ -51,16 +51,16 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./face_painting.html">Face Painting and Temporary
+                                <li><a class="dropdown-item" href="face_painting.html">Face Painting and Temporary
                                         Tatto</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./balloon_sculpting.html">Balloon Sculpting</a></li>
+                                <li><a class="dropdown-item" href="balloon_sculpting.html">Balloon Sculpting</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./henna_tattoo.html">Henna Tattoo</a></li>
+                                <li><a class="dropdown-item" href="henna_tattoo.html">Henna Tattoo</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -71,7 +71,7 @@
                     <li class="nav-item d-flex justify-content-center">
                         <div class="btn-group">
                             <button type="button" class="btn">
-                                <a href="./character_packages.html">
+                                <a href="character_packages.html">
                                     <img id="nav-icon" class="center-block" src="img/character.png" alt="">
                                     Character <br> Package
                                 </a>
@@ -81,47 +81,47 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./fairy_package.html">Fairy Package</a></li>
+                                <li><a class="dropdown-item" href="fairy_package.html">Fairy Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./princess_package.html">Princess Package</a></li>
+                                <li><a class="dropdown-item" href="princess_package.html">Princess Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./pirate_package.html">Pirate Package</a></li>
+                                <li><a class="dropdown-item" href="pirate_package.html">Pirate Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./elsa_or_enna.html">The Ever Enchanting Elsa or
+                                <li><a class="dropdown-item" href="elsa_or_enna.html">The Ever Enchanting Elsa or
                                         Anna</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./elsa_and_enna.html">Elsa and Anna</a></li>
+                                <li><a class="dropdown-item" href="elsa_and_enna.html">Elsa and Anna</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./elsa_enna_olaf.html">Elsa, Anna, and Olaf</a></li>
+                                <li><a class="dropdown-item" href="elsa_enna_olaf.html">Elsa, Anna, and Olaf</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./clown_package.html">Clown Package</a></li>
+                                <li><a class="dropdown-item" href="clown_package.html">Clown Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./superhero_package.html">Superhero Package</a></li>
+                                <li><a class="dropdown-item" href="superhero_package.html">Superhero Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./magician_package.html">Magician Package</a></li>
+                                <li><a class="dropdown-item" href="magician_package.html">Magician Package</a></li>
                             </ul>
                         </div>
                     </li>
                     <li class="nav-item d-flex justify-content-center">
                         <div class="btn-group">
                             <button type="button" class="btn">
-                                <a href="./corporate_packages.html">
+                                <a href="corporate_packages.html">
                                     <img id="nav-icon" class="center-block" src="img/corporate.png" alt="">
                                     Corporate <br> Package
                                 </a>
@@ -131,38 +131,38 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./sports_events.html">Sports Events</a></li>
+                                <li><a class="dropdown-item" href="sports_events.html">Sports Events</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./xmas_events.html">Christmas Events</a></li>
+                                <li><a class="dropdown-item" href="xmas_events.html">Christmas Events</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./jumping_castle.html">Jumping Castle</a></li>
+                                <li><a class="dropdown-item" href="jumping_castle.html">Jumping Castle</a></li>
                             </ul>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="./gallery.html">
+                        <a class="nav-link  text-center" href="gallery.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/gallery_icon.png" alt="">
                             Gallery
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="./about_us.html">
+                        <a class="nav-link  text-center" href="about_us.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/about_icon.png" alt="">
                             About Us
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="./contact_us.html">
+                        <a class="nav-link  text-center" href="contact_us.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/contact_icon.png" alt="">
                             Contact
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="./book_us.html">
+                        <a class="nav-link  text-center" href="book_us.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/booking_icon.png" alt="">
                             Booking
                         </a>
@@ -172,7 +172,7 @@
         </div>
     </nav>
     <div>
-        <a href="/book_us.html"><img id="slider" src="img/slider.png" alt=""></a>
+        <a href="book_us.html"><img id="slider" src="img/slider.png" alt=""></a>
     </div>
 
 
@@ -182,8 +182,8 @@
 
             <div class="row my-5">
                 <div class="col-md-6 col-lg-4 my-3 position-relative">
-                    <div class="position-absolute d-none d-md-block" style="left: -65px; bottom: -65px; z-index: 99;">
-                        <img src="img/card-left.png" alt="badge" class="img-fluid" style="height: 130px;" />
+                    <div class="position-absolute d-none d-md-block" id="card-left-img">
+                        <img src="img/card-left.png" alt="badge" class="img-fluid" style="height: 130px;">
                     </div>
                     <div class="cardX shadow h-100">
                         <div class="card-body p-5" id="card-left">
@@ -221,7 +221,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 my-3 position-relative">
-                    <div class="position-absolute d-none d-md-block" style="right: -65px; bottom: -65px; z-index: 99;">
+                    <div class="position-absolute d-none d-md-block" id="card-right-img">
                         <img src="img/card-right.png" alt="badge" class="img-fluid" style="height: 180px;" />
                     </div>
                     <div class="cardX shadow h-100">
@@ -262,38 +262,38 @@
         <div id="mobile-slider">
             <div id="carouselExampleInterval2" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="500">
-                        <img src="img/slider-2-mobile/1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-item active" data-bs-interval="2000">
+                        <img src="img/gallery/02.jpg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="500">
-                        <img src="img/slider-2-mobile/2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="img/gallery/01.jpg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="500">
-                        <img src="img/slider-2-mobile/3.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="img/gallery/09.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item active" data-bs-interval="2000">
-                        <img src="img/slider-2-mobile/4.jpg" class="d-block w-100" alt="...">
+                        <img src="img/gallery/11.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
-                        <img src="img/slider-2-mobile/5.jpg" class="d-block w-100" alt="...">
+                        <img src="img/gallery/15.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
-                        <img src="img/slider-2-mobile/6.jpg" class="d-block w-100" alt="...">
+                        <img src="img/gallery/20.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item active" data-bs-interval="2000">
-                        <img src="img/slider-2-mobile/7.jpg" class="d-block w-100" alt="...">
+                        <img src="img/gallery/24.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
-                        <img src="img/slider-2-mobile/8.jpg" class="d-block w-100" alt="...">
+                        <img src="img/gallery/29.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
-                        <img src="img/slider-2-mobile/9.jpg" class="d-block w-100" alt="...">
+                        <img src="img/gallery/45.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
             </div>
         </div><br>
         <div class="text-center">
-            <a href="/gallery.html"><button class="button-custom" type="button" id="offer-btn">View More</button></a>
+            <a href="gallery.html"><button class="button-custom" type="button" id="offer-btn">View More</button></a>
         </div>
 
         <div class="container">
@@ -410,26 +410,34 @@
 
                 </div>
 
-                <div class="col-md-4 footer-mid">
+                <div class="col-lg-4 footer-mid">
                     <p class="footer-heading">Gallery</p>
-                    <a href="./gallery.html">
-                        <img src="img/gallery.png" alt=""> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <img src="img/gallery2.png" alt=""> <br><br>
-                        <img src="img/gallery.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <img src="img/gallery2.png" alt=""> <br>
+                    <a href="gallery.html">
+                        <div class="row mb-1">
+                            <div class="col footer-image">
+                                <img src="img/gallery1.jpg" alt="">
+                                <img src="img/gallery2.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="row footer-image">
+                            <div class="col">
+                                <img src="img/gallery3.jpg" alt="">
+                                <img src="img/gallery4.jpg" alt="">
+                            </div>
+                        </div>
                     </a>
                 </div>
 
                 <div class="col-md-4 footer-right">
                     <p class="footer-heading">Sitemap</p><br>
-                    <a href="./index.html">Home </a><br>
-                    <a href="./party_packages.html">Party Package </a><br>
-                    <a href="./character_packages.html">Character Package </a><br>
-                    <a href="./corporate_packages.html">Corporate Package </a><br>
-                    <a href="./gallery.html">Gallery </a><br>
-                    <a href="./about_us.html">About Us </a><br>
-                    <a href="./book_us.html">Book Now </a><br>
-                    <a href="./contact_us.html">Contact Us </a><br>
+                    <a href="index.html">Home </a><br>
+                    <a href="party_packages.html">Party Package </a><br>
+                    <a href="character_packages.html">Character Package </a><br>
+                    <a href="corporate_packages.html">Corporate Package </a><br>
+                    <a href="gallery.html">Gallery </a><br>
+                    <a href="about_us.html">About Us </a><br>
+                    <a href="book_us.html">Book Now </a><br>
+                    <a href="contact_us.html">Contact Us </a><br>
                 </div>
             </div>
         </div>
