--- a/about_us.html
+++ b/about_us.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="./">
+            <a class="navbar-brand" href="index.html">
                 <img id="nav-logo" src="img/kids-dream-logo.png" alt=""><br>
                 <p id="nav-logo-text">Kids Dream Entertaitment</p>
             </a>
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-center" aria-current="page" href="./">
+                        <a class="nav-link text-center" aria-current="page" href="index.html">
                             <img id="nav-icon" class="center-block  nav-margin" src="img/home_icon.png" alt="">
                             Homepage
                         </a>
@@ -41,7 +41,7 @@
                     <li class="nav-item d-flex justify-content-center">
                         <div class="btn-group">
                             <button type="button" class="btn">
-                                <a href="./party_packages.html">
+                                <a href="party_packages.html">
                                     <img id="nav-icon" class="center-block" src="img/party.png" alt="">
                                     Party <br> Package
                                 </a>
@@ -51,16 +51,16 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./face_painting.html">Face Painting and Temporary
+                                <li><a class="dropdown-item" href="face_painting.html">Face Painting and Temporary
                                         Tatto</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./balloon_sculpting.html">Balloon Sculpting</a></li>
+                                <li><a class="dropdown-item" href="balloon_sculpting.html">Balloon Sculpting</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./henna_tattoo.html">Henna Tattoo</a></li>
+                                <li><a class="dropdown-item" href="henna_tattoo.html">Henna Tattoo</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -72,7 +72,7 @@
                     <li class="nav-item d-flex justify-content-center">
                         <div class="btn-group">
                             <button type="button" class="btn">
-                                <a href="./character_packages.html">
+                                <a href="character_packages.html">
                                     <img id="nav-icon" class="center-block" src="img/character.png" alt="">
                                     Character <br> Package
                                 </a>
@@ -82,47 +82,47 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./fairy_package.html">Fairy Package</a></li>
+                                <li><a class="dropdown-item" href="fairy_package.html">Fairy Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./princess_package.html">Princess Package</a></li>
+                                <li><a class="dropdown-item" href="princess_package.html">Princess Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./pirate_package.html">Pirate Package</a></li>
+                                <li><a class="dropdown-item" href="pirate_package.html">Pirate Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./elsa_or_enna.html">The Ever Enchanting Elsa or
+                                <li><a class="dropdown-item" href="elsa_or_enna.html">The Ever Enchanting Elsa or
                                         Anna</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./elsa_and_enna.html">Elsa and Anna</a></li>
+                                <li><a class="dropdown-item" href="elsa_and_enna.html">Elsa and Anna</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./elsa_enna_olaf.html">Elsa, Anna, and Olaf</a></li>
+                                <li><a class="dropdown-item" href="elsa_enna_olaf.html">Elsa, Anna, and Olaf</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./clown_package.html">Clown Package</a></li>
+                                <li><a class="dropdown-item" href="clown_package.html">Clown Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./superhero_package.html">Superhero Package</a></li>
+                                <li><a class="dropdown-item" href="superhero_package.html">Superhero Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./magician_package.html">Magician Package</a></li>
+                                <li><a class="dropdown-item" href="magician_package.html">Magician Package</a></li>
                             </ul>
                         </div>
                     </li>
                     <li class="nav-item d-flex justify-content-center">
                         <div class="btn-group">
                             <button type="button" class="btn">
-                                <a href="./corporate_packages.html">
+                                <a href="corporate_packages.html">
                                     <img id="nav-icon" class="center-block" src="img/corporate.png" alt="">
                                     Corporate <br> Package
                                 </a>
@@ -132,38 +132,38 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./sports_events.html">Sports Events</a></li>
+                                <li><a class="dropdown-item" href="sports_events.html">Sports Events</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./xmas_events.html">Christmas Events</a></li>
+                                <li><a class="dropdown-item" href="xmas_events.html">Christmas Events</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./jumping_castle.html">Jumping Castle</a></li>
+                                <li><a class="dropdown-item" href="jumping_castle.html">Jumping Castle</a></li>
                             </ul>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="./gallery.html">
+                        <a class="nav-link  text-center" href="gallery.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/gallery_icon.png" alt="">
                             Gallery
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-center" href="./about_us.html">
+                        <a class="nav-link active text-center" href="about_us.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/about_icon.png" alt="">
                             About Us
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="./contact_us.html">
+                        <a class="nav-link  text-center" href="contact_us.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/contact_icon.png" alt="">
                             Contact
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="./book_us.html">
+                        <a class="nav-link  text-center" href="book_us.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/booking_icon.png" alt="">
                             Booking
                         </a>
@@ -176,7 +176,7 @@
         style="background: url('img/topbanner.png');">
         <div class="page-title"><br> About Us</div>
     </div>
-    <div class="container main-body">
+    <div class="container main-body p-5">
         <div class="row">
 
             <div class="col-md-8" style="text-align: justify;">
@@ -198,61 +198,56 @@
             <div class="col-md-4 ">
                 <img class="center-block" src="img/about_us_1.png" style="width: 80%;" alt="">
             </div>
-        </div><br><br>
-        <div class="row">
-            <div class="col-lg-2 col-md-5 col-sm-7"
-                style="margin:15px; padding: 30px; background-color: rgba(0, 255, 255, 0.363); border-radius: 10%;">
-                <div
-                    style="background-color: rgba(23, 23, 65, 0.705); border-radius: 10%; text-align: center; min-height: 200px; color: white; font-size: 25px; padding-top: 60px;">
-                    Face
-                    <br>
-                    Painting
+        </div><br><br><br><br>
+        <div class="row justify-content-center">
+            <div class="col-lg-2 col-md-6 p-2">
+                <div class="about-back-box">
+                    <p class="about-front-box">
+                        Face<br>Painting
+                    </p>
                 </div>
             </div>
-            <div class="col-lg-2 col-md-5 col-sm-7"
-                style="margin:15px; padding: 30px; background-color: rgba(0, 255, 255, 0.363); border-radius: 10%;">
-                <div
-                    style="background-color: rgba(23, 23, 65, 0.705); border-radius: 10%; text-align: center; min-height: 200px; color: white; font-size: 25px; padding-top: 60px;">
-                    Balloon
-                    <br>
-                    Sculpting
+            <div class="col-lg-2 col-md-6 p-2">
+                <div class="about-back-box">
+                    <p class="about-front-box">
+                        Balloon
+                        <br>
+                        Sculpting
+                    </p>
                 </div>
             </div>
-            <div class="col-lg-2 col-md-5 col-sm-7"
-                style="margin:15px; padding: 30px; background-color: rgba(0, 255, 255, 0.363); border-radius: 10%;">
-                <div
-                    style="background-color: rgba(23, 23, 65, 0.705); border-radius: 10%; text-align: center; min-height: 200px; color: white; font-size: 25px; padding-top: 85px;">
-                    Games
+            <div class="col-lg-2 col-md-6 p-2">
+                <div class="about-back-box">
+                    <p class="about-front-box">
+                        Games <br> & Sports
+                    </p>
                 </div>
             </div>
-            <div class="col-lg-2 col-md-5 col-sm-7"
-                style="margin:15px; padding: 30px; background-color: rgba(0, 255, 255, 0.363); border-radius: 10%;">
-                <div
-                    style="background-color: rgba(23, 23, 65, 0.705); border-radius: 10%; text-align: center; min-height: 200px; color: white; font-size: 25px; padding-top: 60px;">
-                    Music
-                    <br>
-                    Activity
+            <div class="col-lg-2 col-md-6 p-2">
+                <div class="about-back-box">
+                    <p class="about-front-box">
+                        Music<br>Activity
+                    </p>
                 </div>
             </div>
-            <div class="col-lg-2 col-md-5 col-sm-7"
-                style="margin:15px; padding: 30px; background-color: rgba(0, 255, 255, 0.363); border-radius: 10%;">
-                <div
-                    style="background-color: rgba(23, 23, 65, 0.705); border-radius: 10%; text-align: center; min-height: 200px; color: white; font-size: 25px; padding-top: 60px;">
-                    Magic
-                    <br>
-                    Show
+            <div class="col-lg-2 col-md-6 p-2">
+                <div class="about-back-box">
+                    <p class="about-front-box">
+                        Magic<br>Show
+                    </p>
                 </div>
             </div>
-        </div><br><br>
+        </div>
+        <br><br>
         <div class="row">
             <div class="col-md-4">
-                <img src="./img/about_us_2.png" alt="" style="width: 100%;">
+                <img src="img/about_us_2.png" alt="" style="width: 100%;">
             </div>
             <div class="col-md-4">
-                <img src="./img/about_us_3.png" alt="" style="width: 100%;">
+                <img src="img/about_us_3.png" alt="" style="width: 100%;">
             </div>
             <div class="col-md-4">
-                <img src="./img/about_us_4.png" alt="" style="width: 100%;">
+                <img src="img/about_us_4.png" alt="" style="width: 100%;">
             </div>
         </div>
     </div><br><br>
@@ -267,7 +262,7 @@
         </div>
         <div class="container">
             <div class="row footer-div">
-                <div class="col-md-4 footer-left">
+                <div class="col-lg-4 footer-left">
 
                     <p class="footer-heading">Contact</p>
                     <i class="fa-solid fa-phone" style="color: white;"></i>&nbsp;&nbsp;1300 976 750
@@ -282,26 +277,34 @@
 
                 </div>
 
-                <div class="col-md-4 footer-mid">
+                <div class="col-lg-4 footer-mid">
                     <p class="footer-heading">Gallery</p>
-                    <a href="./gallery.html">
-                        <img src="img/gallery.png" alt=""> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <img src="img/gallery2.png" alt=""> <br><br>
-                        <img src="img/gallery.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <img src="img/gallery2.png" alt=""> <br>
+                    <a href="gallery.html">
+                        <div class="row mb-1">
+                            <div class="col footer-image">
+                                <img src="img/gallery1.jpg" alt="">
+                                <img src="img/gallery2.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="row footer-image">
+                            <div class="col">
+                                <img src="img/gallery3.jpg" alt="">
+                                <img src="img/gallery4.jpg" alt="">
+                            </div>
+                        </div>
                     </a>
                 </div>
 
-                <div class="col-md-4 footer-right">
+                <div class="col-lg-4 footer-right">
                     <p class="footer-heading">Sitemap</p><br>
-                    <a href="./index.html">Home </a><br>
-                    <a href="./party_packages.html">Party Package </a><br>
-                    <a href="./character_packages.html">Character Package </a><br>
-                    <a href="./corporate_packages.html">Corporate Package </a><br>
-                    <a href="./gallery.html">Gallery </a><br>
-                    <a href="./about_us.html">About Us </a><br>
-                    <a href="./book_us.html">Book Now </a><br>
-                    <a href="./contact_us.html">Contact Us </a><br>
+                    <a href="index.html">Home </a><br>
+                    <a href="party_packages.html">Party Package </a><br>
+                    <a href="character_packages.html">Character Package </a><br>
+                    <a href="corporate_packages.html">Corporate Package </a><br>
+                    <a href="gallery.html">Gallery </a><br>
+                    <a href="about_us.html">About Us </a><br>
+                    <a href="book_us.html">Book Now </a><br>
+                    <a href="contact_us.html">Contact Us </a><br>
                 </div>
             </div>
         </div>
