--- a/gallery-3.html
+++ b/gallery-3.html
@@ -451,13 +451,21 @@
 
                 </div>
 
-                <div class="col-md-4 footer-mid">
+                <div class="col-lg-4 footer-mid">
                     <p class="footer-heading">Gallery</p>
                     <a href="gallery.html">
-                        <img src="img/gallery.png" alt=""> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <img src="img/gallery2.png" alt=""> <br><br>
-                        <img src="img/gallery.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <img src="img/gallery2.png" alt=""> <br>
+                        <div class="row mb-1">
+                            <div class="col footer-image">
+                                <img src="img/gallery1.jpg" alt="">
+                                <img src="img/gallery2.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="row footer-image">
+                            <div class="col">
+                                <img src="img/gallery3.jpg" alt="">
+                                <img src="img/gallery4.jpg" alt="">
+                            </div>
+                        </div>
                     </a>
                 </div>
 
