--- a/henna_tattoo.html
+++ b/henna_tattoo.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="./">
+            <a class="navbar-brand" href="index.html">
                 <img id="nav-logo" src="img/kids-dream-logo.png" alt=""><br>
                 <p id="nav-logo-text">Kids Dream Entertaitment</p>
             </a>
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-center" aria-current="page" href="./">
+                        <a class="nav-link text-center" aria-current="page" href="index.html">
                             <img id="nav-icon" class="center-block  nav-margin" src="img/home_icon.png" alt="">
                             Homepage
                         </a>
@@ -39,7 +39,7 @@
                     <li class="nav-item d-flex justify-content-center">
                         <div class="btn-group">
                             <button type="button" class="btn">
-                                <a href="./party_packages.html" class="active">
+                                <a href="party_packages.html" class="active">
                                     <img id="nav-icon" class="center-block" src="img/party.png" alt="">
                                     Party <br> Package
                                 </a>
@@ -49,16 +49,16 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./face_painting.html">Face Painting and Temporary
+                                <li><a class="dropdown-item" href="face_painting.html">Face Painting and Temporary
                                         Tatto</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./balloon_sculpting.html">Balloon Sculpting</a></li>
+                                <li><a class="dropdown-item" href="balloon_sculpting.html">Balloon Sculpting</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./henna_tattoo.html">Henna Tattoo</a></li>
+                                <li><a class="dropdown-item" href="henna_tattoo.html">Henna Tattoo</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -69,7 +69,7 @@
                     <li class="nav-item d-flex justify-content-center">
                         <div class="btn-group">
                             <button type="button" class="btn">
-                                <a href="./character_packages.html">
+                                <a href="character_packages.html">
                                     <img id="nav-icon" class="center-block" src="img/character.png" alt="">
                                     Character <br> Package
                                 </a>
@@ -79,47 +79,47 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./fairy_package.html">Fairy Package</a></li>
+                                <li><a class="dropdown-item" href="fairy_package.html">Fairy Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./princess_package.html">Princess Package</a></li>
+                                <li><a class="dropdown-item" href="princess_package.html">Princess Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./pirate_package.html">Pirate Package</a></li>
+                                <li><a class="dropdown-item" href="pirate_package.html">Pirate Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./elsa_or_enna.html">The Ever Enchanting Elsa or
+                                <li><a class="dropdown-item" href="elsa_or_enna.html">The Ever Enchanting Elsa or
                                         Anna</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./elsa_and_enna.html">Elsa and Anna</a></li>
+                                <li><a class="dropdown-item" href="elsa_and_enna.html">Elsa and Anna</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./elsa_enna_olaf.html">Elsa, Anna, and Olaf</a></li>
+                                <li><a class="dropdown-item" href="elsa_enna_olaf.html">Elsa, Anna, and Olaf</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./clown_package.html">Clown Package</a></li>
+                                <li><a class="dropdown-item" href="clown_package.html">Clown Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./superhero_package.html">Superhero Package</a></li>
+                                <li><a class="dropdown-item" href="superhero_package.html">Superhero Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./magician_package.html">Magician Package</a></li>
+                                <li><a class="dropdown-item" href="magician_package.html">Magician Package</a></li>
                             </ul>
                         </div>
                     </li>
                     <li class="nav-item d-flex justify-content-center">
                         <div class="btn-group">
                             <button type="button" class="btn">
-                                <a href="./corporate_packages.html">
+                                <a href="corporate_packages.html">
                                     <img id="nav-icon" class="center-block" src="img/corporate.png" alt="">
                                     Corporate <br> Package
                                 </a>
@@ -129,38 +129,38 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./sports_events.html">Sports Events</a></li>
+                                <li><a class="dropdown-item" href="sports_events.html">Sports Events</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./xmas_events.html">Christmas Events</a></li>
+                                <li><a class="dropdown-item" href="xmas_events.html">Christmas Events</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./jumping_castle.html">Jumping Castle</a></li>
+                                <li><a class="dropdown-item" href="jumping_castle.html">Jumping Castle</a></li>
                             </ul>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="./gallery.html">
+                        <a class="nav-link  text-center" href="gallery.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/gallery_icon.png" alt="">
                             Gallery
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="./about_us.html">
+                        <a class="nav-link  text-center" href="about_us.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/about_icon.png" alt="">
                             About Us
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="./contact_us.html">
+                        <a class="nav-link  text-center" href="contact_us.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/contact_icon.png" alt="">
                             Contact
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="./book_us.html">
+                        <a class="nav-link  text-center" href="book_us.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/booking_icon.png" alt="">
                             Booking
                         </a>
@@ -178,7 +178,7 @@
         <div class="row">
             <div class="col-lg-3 col-sm-12" id="row-1">
                 <div class="card">
-                        <div class="catagory_title text-center">Catagories</div>
+                    <div class="catagory_title text-center">Catagories</div>
                     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                         <li class="nav-item" role="presentation">
                             <button class="nav-link active bg-white" id="pills-home-tab" data-bs-toggle="pill"
@@ -196,7 +196,7 @@
                                 aria-selected="false">Corporate packages</button>
                         </li>
                     </ul>
-                        <div class="catagory_title text-center">Packages</div>
+                    <div class="catagory_title text-center">Packages</div>
                     <div class="tab-content" id="pills-tabContent">
                         <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
                             aria-labelledby="pills-home-tab">
@@ -206,7 +206,7 @@
                                 <li><a href="henna_tattoo.html">Hanna Tattoo</a></li>
                                 <li><a href="mascot_package.html">Mascot Package</a></li>
                             </ul>
-                            </div>
+                        </div>
                         <div class="tab-pane fade" id="pills-profile" role="tabpanel"
                             aria-labelledby="pills-profile-tab">
                             <ul>
@@ -220,7 +220,7 @@
                                 <li><a href="superhero_package.html">Superhero Package</a></li>
                                 <li><a href="magician_package.html">Magician Package</a></li>
                             </ul>
-                            </div>
+                        </div>
                         <div class="tab-pane fade" id="pills-contact" role="tabpanel"
                             aria-labelledby="pills-contact-tab">
                             <ul>
@@ -229,7 +229,7 @@
                                 <li><a href="jumping_castle.html">Jumping Castle</a></li>
                             </ul>
                         </div>
-                        </div>
+                    </div>
 
                 </div>
             </div>
@@ -239,11 +239,11 @@
                     <div class="row">
                         <div class="col-md-8" id="row-1">
                             <p class="text-card">
-                                    Our team of trained actors and professional henna artist can attend your party and
-                                    can do modern and traditional henna designs in natural, white, black, washable
-                                    glitter henna. <br><br>
+                                Our team of trained actors and professional henna artist can attend your party and
+                                can do modern and traditional henna designs in natural, white, black, washable
+                                glitter henna. <br><br>
 
-                                    Enhance your beauty by adding the color of henna on your beautiful hand and arm. We
+                                Enhance your beauty by adding the color of henna on your beautiful hand and arm. We
                                 do henna at the wedding, Baby Shower, and Birthday parties.
                             </p>
                             <br>
@@ -294,7 +294,7 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <a href="./face_painting.html">
+                <a href="face_painting.html">
                     <div class="img-card">
                         <img src="img/face_paint.png" alt="">
                         <div class="img-title">Face Painting & Temporary Tattoo</div>
@@ -302,7 +302,7 @@
                 </a>
             </div>
             <div class="col-md-3">
-                <a href="./balloon_sculpting.html">
+                <a href="balloon_sculpting.html">
                     <div class="img-card">
                         <img src="img/balloon_sculp.png" alt="">
                         <div class="img-title">Balloon Sculpting</div>
@@ -344,26 +344,34 @@
 
                 </div>
 
-                <div class="col-md-4 footer-mid">
+                <div class="col-lg-4 footer-mid">
                     <p class="footer-heading">Gallery</p>
-                    <a href="./gallery.html">
-                        <img src="img/gallery.png" alt=""> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <img src="img/gallery2.png" alt=""> <br><br>
-                        <img src="img/gallery.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <img src="img/gallery2.png" alt=""> <br>
+                    <a href="gallery.html">
+                        <div class="row mb-1">
+                            <div class="col footer-image">
+                                <img src="img/gallery1.jpg" alt="">
+                                <img src="img/gallery2.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="row footer-image">
+                            <div class="col">
+                                <img src="img/gallery3.jpg" alt="">
+                                <img src="img/gallery4.jpg" alt="">
+                            </div>
+                        </div>
                     </a>
                 </div>
 
                 <div class="col-md-4 footer-right">
                     <p class="footer-heading">Sitemap</p><br>
-                    <a href="./index.html">Home </a><br>
-                    <a href="./party_packages.html">Party Package </a><br>
-                    <a href="./character_packages.html">Character Package </a><br>
-                    <a href="./corporate_packages.html">Corporate Package </a><br>
-                    <a href="./gallery.html">Gallery </a><br>
-                    <a href="./about_us.html">About Us </a><br>
-                    <a href="./book_us.html">Book Now </a><br>
-                    <a href="./contact_us.html">Contact Us </a><br>
+                    <a href="index.html">Home </a><br>
+                    <a href="party_packages.html">Party Package </a><br>
+                    <a href="character_packages.html">Character Package </a><br>
+                    <a href="corporate_packages.html">Corporate Package </a><br>
+                    <a href="gallery.html">Gallery </a><br>
+                    <a href="about_us.html">About Us </a><br>
+                    <a href="book_us.html">Book Now </a><br>
+                    <a href="contact_us.html">Contact Us </a><br>
                 </div>
             </div>
         </div>
