nav active fixed

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -172,13 +172,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="../contact-us/">
+                        <a class="nav-link active text-center" href="../contact-us/">
                             <img id="nav-icon" class="center-block nav-margin" src="../img/contact_icon.png" alt="kidsdream-contact-us-icon">
                             Contact
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-center" href="../book-us/">
+                        <a class="nav-link text-center" href="../book-us/">
                             <img id="nav-icon" class="center-block nav-margin" src="../img/booking_icon.png" alt="kidsdream-book-us-icon">
                             Booking
                         </a>
