--- a/gallery/index.html
+++ b/gallery/index.html
@@ -160,7 +160,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="./">
+                        <a class="nav-link active text-center" href="./">
                             <img id="nav-icon" class="center-block nav-margin" src="../img/gallery_icon.png" alt="kidsdream-gallery-icon">
                             Gallery
                         </a>
@@ -178,7 +178,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-center" href="../book-us/">
+                        <a class="nav-link text-center" href="../book-us/">
                             <img id="nav-icon" class="center-block nav-margin" src="../img/booking_icon.png" alt="kidsdream-book-us-icon">
                             Booking
                         </a>
