--- a/about-us/index.html
+++ b/about-us/index.html
@@ -168,7 +168,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="./">
+                        <a class="nav-link active text-center" href="./">
                             <img id="nav-icon" class="center-block nav-margin" src="../img/about_icon.png" alt="kidsdream-about-us-icon">
                             About Us
                         </a>
@@ -180,7 +180,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-center" href="../book-us/">
+                        <a class="nav-link text-center" href="../book-us/">
                             <img id="nav-icon" class="center-block nav-margin" src="../img/booking_icon.png" alt="kidsdream-book-us-icon">
                             Booking
                         </a>
