--- a/packages/party-packages/index.html
+++ b/packages/party-packages/index.html
@@ -12,7 +12,8 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Party Packages - Kids Dream Entertainment</title>
+    <title>Kids party package for your upcoming party or event | Kids Dream Entertainment</title>
+    <meta name="description" content="Kids Dream Entertainment provides a variety of party packages that suit various age groups and interests">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="shortcut icon" href="/img/kids-dream-logo.png" type="image/png">
