about us, party, face

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -213,21 +213,21 @@
                 your Kids while you can sit back and relax enjoying the show.
 
             </div>
-            <div class="col-md-4 ">
-                <img class="center-block" src="../img/about_us_1.png" style="width: 80%;" alt="about-us-img">
+            <div class="col-md-4 h-100 ms-auto overflow-hidden rounded w-25">
+                <img class="w-100" src="../img/about_us_1.png" style="transform: scale(1.7) translate(0, 4%);" alt="about-us-img">
             </div>
-        </div><br><br><br><br>
-        <div class="row justify-content-center">
+        </div>
+        <div class="row justify-content-center mt-3">
             <div class="col-lg-2 col-md-6 p-2">
-                <div class="about-back-box">
-                    <p class="about-front-box">
+                <div class="card bg-danger border-0 shadow d-flex justify-content-center align-items-center">
+                    <p class="border-bottom border-light text-light pb-3 fw-bold" style="border-width: 2px !important;" >
                         Face<br>Painting
                     </p>
                 </div>
             </div>
             <div class="col-lg-2 col-md-6 p-2">
-                <div class="about-back-box">
-                    <p class="about-front-box">
+                <div class="card border-0 shadow d-flex justify-content-center align-items-center">
+                    <p class="border-bottom border-danger pb-3 fw-bold" style="border-width: 2px !important;" >
                         Balloon
                         <br>
                         Sculpting
@@ -235,37 +235,37 @@
                 </div>
             </div>
             <div class="col-lg-2 col-md-6 p-2">
-                <div class="about-back-box">
-                    <p class="about-front-box">
+                <div class="card bg-danger border-0 shadow d-flex justify-content-center align-items-center">
+                    <p class="border-bottom border-light text-light pb-3 fw-bold" style="border-width: 2px !important;" >
                         Games <br> & Sports
                     </p>
                 </div>
             </div>
             <div class="col-lg-2 col-md-6 p-2">
-                <div class="about-back-box">
-                    <p class="about-front-box">
+                <div class="card border-0 shadow d-flex justify-content-center align-items-center">
+                    <p class="border-bottom border-danger pb-3 fw-bold" style="border-width: 2px !important;" >
                         Music<br>Activity
                     </p>
                 </div>
             </div>
             <div class="col-lg-2 col-md-6 p-2">
-                <div class="about-back-box">
-                    <p class="about-front-box">
+                <div class="card bg-danger border-0 shadow d-flex justify-content-center align-items-center">
+                    <p class="border-bottom border-light text-light pb-3 fw-bold" style="border-width: 2px !important;" >
                         Magic<br>Show
                     </p>
                 </div>
             </div>
         </div>
         <br><br>
-        <div class="row">
-            <div class="col-md-4">
-                <img src="../img/about_us_2.png" alt="kidsdream-about-us-img-1" style="width: 100%;">
+        <div class="row d-flex justify-content-between">
+            <div class="col-md-4  h-100 mx-auto overflow-hidden rounded-circle w-25 shadow border-danger border" style="border-width: 5px !important;">
+                <img src="../img/about_us_2.png" alt="kidsdream-about-us-img-1" class="w-100" style="transform: scale(1.5) translate(3%, 0%);">
             </div>
-            <div class="col-md-4">
-                <img src="../img/about_us_3.png" alt="kidsdream-about-us-img-2" style="width: 100%;">
+            <div class="col-md-4  h-100 mx-auto overflow-hidden rounded-circle w-25 shadow border-danger border" style="border-width: 5px !important;">
+                <img src="../img/about_us_3.png" alt="kidsdream-about-us-img-2" class="w-100" style="transform: scale(1.5) translate(3%, 0%);">
             </div>
-            <div class="col-md-4">
-                <img src="../img/about_us_4.png" alt="kidsdream-about-us-img-3" style="width: 100%;">
+            <div class="col-md-4  h-100 mx-auto overflow-hidden rounded-circle w-25 shadow border-danger border" style="border-width: 5px !important;">
+                <img src="../img/about_us_4.png" alt="kidsdream-about-us-img-3" class="w-100" style="transform: scale(1.5) translate(3%, 0%);">
             </div>
         </div>
     </div><br><br>
