--- a/packages/party-packages/face-painting/index.html
+++ b/packages/party-packages/face-painting/index.html
@@ -333,7 +333,7 @@
             <div class="col-md-3">
                 <a href="../balloon-sculpting/">
                     <div class="img-card">
-                        <img src="img/balloon_sculp.png" alt="kidsdream-balloon-Sculpting-img">
+                        <img src="../../../img/balloon_sculp.png" alt="kidsdream-balloon-Sculpting-img">
                         <div class="img-title">Balloon Sculpting</div>
                     </div>
                 </a>
