--- a/packages/party-packages/index.html
+++ b/packages/party-packages/index.html
@@ -13,7 +13,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kids party package for your upcoming party or event | Kids Dream Entertainment</title>
-    <meta name="description" content="Kids Dream Entertainment provides a variety of party packages that suit various age groups and interests">
+    <meta name="description"
+        content="Kids Dream Entertainment provides a variety of party packages that suit various age groups and interests">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="shortcut icon" href="/img/kids-dream-logo.png" type="image/png">
@@ -23,7 +24,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="canonical" href="https://kidsdream.com.au/packages/party-packages/">    
+    <link rel="canonical" href="https://kidsdream.com.au/packages/party-packages/">
     <link rel="stylesheet" href="../../css/style.css">
 </head>
 
@@ -50,8 +51,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-center" aria-current="page" href="../../">                    
-                            <img id="nav-icon" class="center-block  nav-margin" src="../../img/home_icon.png" alt="homepage-icon">
+                        <a class="nav-link text-center" aria-current="page" href="../../">
+                            <img id="nav-icon" class="center-block  nav-margin" src="../../img/home_icon.png"
+                                alt="homepage-icon">
                             Homepage
                         </a>
                     </li>
@@ -59,7 +61,8 @@
                         <div class="btn-group">
                             <button type="button" class="btn">
                                 <a href="./" class="active">
-                                    <img id="nav-icon" class="center-block" src="../../img/party.png" alt="kidsdream-party-packages-icon">
+                                    <img id="nav-icon" class="center-block" src="../../img/party.png"
+                                        alt="kidsdream-party-packages-icon">
                                     Party <br> Package
                                 </a>
                             </button>
@@ -89,7 +92,8 @@
                         <div class="btn-group">
                             <button type="button" class="btn">
                                 <a href="../character-packages/">
-                                    <img id="nav-icon" class="center-block" src="../../img/character.png" alt="kidsdream-character-packages-icon">
+                                    <img id="nav-icon" class="center-block" src="../../img/character.png"
+                                        alt="kidsdream-character-packages-icon">
                                     Character <br> Package
                                 </a>
                             </button>
@@ -98,40 +102,49 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../character-packages/fairy-package/">Fairy Package</a></li>
+                                <li><a class="dropdown-item" href="../character-packages/fairy-package/">Fairy
+                                        Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../character-packages/princess-package/">Princess Package</a></li>
+                                <li><a class="dropdown-item" href="../character-packages/princess-package/">Princess
+                                        Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../character-packages/pirate-package/">Pirate Package</a></li>
+                                <li><a class="dropdown-item" href="../character-packages/pirate-package/">Pirate
+                                        Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../character-packages/elsa-or-enna/">The Ever Enchanting Elsa or
+                                <li><a class="dropdown-item" href="../character-packages/elsa-or-enna/">The Ever
+                                        Enchanting Elsa or
                                         Anna</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../character-packages/elsa-and-enna/">Elsa and Anna</a></li>
+                                <li><a class="dropdown-item" href="../character-packages/elsa-and-enna/">Elsa and
+                                        Anna</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../character-packages/elsa-enna-olaf/">Elsa, Anna, and Olaf</a></li>
+                                <li><a class="dropdown-item" href="../character-packages/elsa-enna-olaf/">Elsa, Anna,
+                                        and Olaf</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../character-packages/clown-package/">Clown Package</a></li>
+                                <li><a class="dropdown-item" href="../character-packages/clown-package/">Clown
+                                        Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../character-packages/superhero-package/">Superhero Package</a></li>
+                                <li><a class="dropdown-item" href="../character-packages/superhero-package/">Superhero
+                                        Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../character-packages/magician-package/">Magician Package</a></li>
+                                <li><a class="dropdown-item" href="../character-packages/magician-package/">Magician
+                                        Package</a></li>
                             </ul>
                         </div>
                     </li>
@@ -139,7 +152,8 @@
                         <div class="btn-group">
                             <button type="button" class="btn">
                                 <a href="../corporate-packages/">
-                                    <img id="nav-icon" class="center-block" src="../../img/corporate.png" alt="kidsdream-corporate-packages-icon">
+                                    <img id="nav-icon" class="center-block" src="../../img/corporate.png"
+                                        alt="kidsdream-corporate-packages-icon">
                                     Corporate <br> Package
                                 </a>
                             </button>
@@ -148,39 +162,46 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../corporate-packages/sports-events/">Sports Events</a></li>
+                                <li><a class="dropdown-item" href="../corporate-packages/sports-events/">Sports
+                                        Events</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../corporate-packages/xmas-events/">Christmas Events</a></li>
+                                <li><a class="dropdown-item" href="../corporate-packages/xmas-events/">Christmas
+                                        Events</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../corporate-packages/jumping-castle/">Jumping Castle</a></li>
+                                <li><a class="dropdown-item" href="../corporate-packages/jumping-castle/">Jumping
+                                        Castle</a></li>
                             </ul>
                         </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link  text-center" href="../../gallery/">
-                            <img id="nav-icon" class="center-block nav-margin" src="../../img/gallery_icon.png" alt="kidsdream-gallery-icon">
+                            <img id="nav-icon" class="center-block nav-margin" src="../../img/gallery_icon.png"
+                                alt="kidsdream-gallery-icon">
                             Gallery
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link  text-center" href="../../about-us/">
-                            <img id="nav-icon" class="center-block nav-margin" src="../../img/about_icon.png" alt="kidsdream-about-us-icon">
+                            <img id="nav-icon" class="center-block nav-margin" src="../../img/about_icon.png"
+                                alt="kidsdream-about-us-icon">
                             About Us
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link  text-center" href="../../contact-us/">
-                            <img id="nav-icon" class="center-block nav-margin" src="../../img/contact_icon.png" alt="kidsdream-contact-us-icon">
+                            <img id="nav-icon" class="center-block nav-margin" src="../../img/contact_icon.png"
+                                alt="kidsdream-contact-us-icon">
                             Contact
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link  text-center" href="../../book-us/">
-                            <img id="nav-icon" class="center-block nav-margin" src="../../img/booking_icon.png" alt="kidsdream-book-us-icon">
+                            <img id="nav-icon" class="center-block nav-margin" src="../../img/booking_icon.png"
+                                alt="kidsdream-book-us-icon">
                             Booking
                         </a>
                     </li>
@@ -189,8 +210,7 @@
         </div>
     </nav>
 
-    <div class="page-title-background d-flex justify-content-center align-items-center"
-        style="background: url('../../img/topbanner.png');">
+    <div class="page-title-background text-center" style="background: url('../../img/topbanner.png');">
         <h1 class="page-title"><br>Party Packages</h1>
     </div>
     <div class="container main-body">
@@ -240,10 +260,44 @@
             <div class="col-lg-9 col-sm-12" id="row-2">
                 <div class="card">
                     <div class="row">
+                        <!-- TODO: omit -->
+                        <p class="d-none">
+                            Are you on the lookout for exceptional kids party packages that caters to a variety of age
+                            groups
+                            and interests? Look no further than Kids Dream Entertainment! Our versatile themes are
+                            designed to
+                            delight and entertain, whether you're planning a birthday party, corporate event, community
+                            gathering, Christmas celebration, or any other special occasion.
+
+                            Our team of professional entertainers are highly skilled, experienced, and passionate about
+                            bringing
+                            joy to children's parties. They know exactly how to keep kids engaged and happy throughout
+                            the
+                            event, ensuring a successful and memorable celebration for all.
+
+                            At Kids Dream Entertainment, we are committed to helping you find the perfect children's
+                            party
+                            packages for your unique needs. Our captivating party themes take the stress out of planning
+                            and
+                            bring your vision to life.
+
+                            To start planning your child's perfect party, simply get in touch with us via our website or
+                            give us
+                            a call. Our friendly and knowledgeable staff will assist you in selecting a party packages
+                            that will
+                            exceed your expectations and create unforgettable memories for your child and their guests.
+
+                            Experience the magic of a well-planned, expertly executed children's party with Kids Dream
+                            Entertainment. Let us help you make your child's special day an unforgettable adventure that
+                            they
+                            will cherish for years to come!
+
+                        </p>
                         <div class="col-md-4">
                             <a href="./face-painting/">
                                 <div class="img-card">
-                                    <img src="../../img/face_paint.png" alt="kidsdream-face-Painting-Temporary-Tattoo-img">
+                                    <img src="../../img/face_paint.png"
+                                        alt="kidsdream-face-Painting-Temporary-Tattoo-img">
                                     <div class="img-title">Face Painting & Temporary Tattoo</div>
                                 </div>
                             </a>
@@ -276,6 +330,19 @@
                             </a>
                         </div>
                     </div>
+
+                    <!-- TODO: omit -->
+                    <p class="d-none">Looking for kids party packages, well don’t worry Kids Dream Entertainment
+                        provides a variety of
+                        party packages that suit various age groups and interests. You can use those themes at your
+                        birthday party, corporate event, community event, Christmas event, celebratory event, and
+                        whatever you want. Our professional entertainers are highly skilled and experienced and also
+                        they know how to keep happy the kids at the party. We are here to make your kids party
+                        successful and to help you choose the perfect children's party for you. Give us a call or
+                        contact us.
+
+                        Choose the party themes
+                    </p>
                 </div>
             </div>
         </div>
@@ -314,8 +381,8 @@
                             <div class="col footer-image">
                                 <img src="../../img/gallery1.jpg" alt="kidsdream-gallery-1-img">
                                 <img src="../../img/gallery2.jpg" alt="kidsdream-gallery-2-img">
-                            </div>   
-                        </div>                     
+                            </div>
+                        </div>
                         <div class="row footer-image">
                             <div class="col">
                                 <img src="../../img/gallery3.jpg" alt="kidsdream-gallery-3-img">
